--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,9 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.2.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.18.3"
   }
 }
